<resources>

<!--    Login Page-->
    <string name="app_name">eaSYshop</string>
    <string name="login">Login</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="app_logo">eaSYshop Logo</string>

<!--    Register Page-->
    <string name="register_title">Register</string>
    <string name="name_register">Name</string>
    <string name="email_register">Email</string>
    <string name="password_register">Password</string>
    <string name="register_button">Create Account</string>
    <string name="already">Already Registered? </string>

<!--    payment page-->
    <string name="payment_page">Payment Page</string>
    <string name="credit_card">Credit card</string>
    <string name="card_number">Card number</string>
    <string name="card_holder">Card holder</string>
    <string name="expiration_date">Expiration date</string>
    <string name="cvv">CVV</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="credit_card_icon">Credit Card Icon</string>

<!--    Create Post Page-->
    <string name="sell_post">Create Post</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price_in_usd">Price in USD</string>
    <string name="pickup_address">pickup address</string>
    <string name="address">Address</string>
    <string name="pickup_location">Pickup location</string>
    <string name="upload_images">Upload images</string>
    <string name="product_image">Product image</string>
    <string name="createpost">Create Post</string>

    <string-array name="cities">
        <item>Select city</item>
        <item>Lod</item>
        <item>Rishon Lezion</item>
        <item>Tel Aviv</item>
        <item>Ness Ziona</item>
    </string-array>

<!--    bottom navigation bar-->
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="menu">Menu</string>
    <string name="menu_title">Menu Actions</string>
    <string name="my_posts">My Posts</string>
    <string name="profile">My Profile</string>
    <string name="logout">Log Out</string>
    <string name="wishlist">Wish List</string>
    <string name="my_orders">My Orders</string>

    <!-- wishlists -->
    <string name="wishList">Wishlists</string>
    <string name="title1">Puma Sofa 2021</string>
    <string name="title2">Sony Radio XM54 </string>
    <string name="description1"> What an amazing Sofa for your Family</string>
    <string name="description2"> Great Radio to hear Music in the morning</string>

    <!-- Profile edit page -->
    <string name="profile_image">Profile Image</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="update">Update</string>

</resources>

